--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Twitter-Bot/node_modules
 Twitter-Bot/config.js
 JSCourseProjects/js-course-app-master/dist
 JSCourseProjects/js-course-app-master/src/js/config.js
+
+*.DS_Store
